--- a/elmdict/pom.xml
+++ b/elmdict/pom.xml
@@ -35,6 +35,7 @@
     <module>camtron</module>
     <module>elscint</module>
     <module>gems</module>
+    <module>hitachi</module>
   </modules>
 
 </project>
