--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -85,6 +85,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-spi</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.dcm4assange.tool</groupId>
       <artifactId>dcm4assange-tool-dcmbenchmark</artifactId>
       <version>${project.version}</version>
