--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -81,6 +81,11 @@
     </dependency>
     <dependency>
       <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-papyrus</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
       <artifactId>dcm4assange-elmdict-picker</artifactId>
       <version>${project.version}</version>
     </dependency>
